CROWD-365 - adds client side form validation to add & edit idea; fixes no-wrap bug

--- a/crowdsource-frontend/src/main/scss/components/ideas/_ideas-grid.scss
+++ b/crowdsource-frontend/src/main/scss/components/ideas/_ideas-grid.scss
@@ -79,6 +79,7 @@ $tile-padding-vertical: 15px;
       margin-top: $mrg-half;
       margin-bottom: $mrg-huge;
       text-align: left;
+      word-break: break-word;
     }
 
     &__rating {
